[gd_scene load_steps=126 format=2]

[ext_resource path="res://scenes/Screens/StartScreen/StartScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/Screens/StartScreen/AtlantisTitleScreen.png" type="Texture" id=2]
[ext_resource path="res://common/assets/fonts/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/Screens/StartScreen/start_anim.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 1074, 644 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 4 )
region = Rect2( 1074, 0, 1074, 644 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 4 )
region = Rect2( 2148, 0, 1074, 644 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 4 )
region = Rect2( 3222, 0, 1074, 644 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 4 )
region = Rect2( 4296, 0, 1074, 644 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 4 )
region = Rect2( 5370, 0, 1074, 644 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 4 )
region = Rect2( 6444, 0, 1074, 644 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 4 )
region = Rect2( 7518, 0, 1074, 644 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 4 )
region = Rect2( 8592, 0, 1074, 644 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 4 )
region = Rect2( 9666, 0, 1074, 644 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 4 )
region = Rect2( 0, 644, 1074, 644 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 4 )
region = Rect2( 1074, 644, 1074, 644 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 4 )
region = Rect2( 2148, 644, 1074, 644 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 4 )
region = Rect2( 3222, 644, 1074, 644 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 4 )
region = Rect2( 4296, 644, 1074, 644 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 4 )
region = Rect2( 5370, 644, 1074, 644 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 4 )
region = Rect2( 6444, 644, 1074, 644 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 4 )
region = Rect2( 7518, 644, 1074, 644 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 4 )
region = Rect2( 8592, 644, 1074, 644 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 4 )
region = Rect2( 9666, 644, 1074, 644 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 4 )
region = Rect2( 0, 1288, 1074, 644 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 4 )
region = Rect2( 1074, 1288, 1074, 644 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 4 )
region = Rect2( 2148, 1288, 1074, 644 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 4 )
region = Rect2( 3222, 1288, 1074, 644 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 4 )
region = Rect2( 4296, 1288, 1074, 644 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 4 )
region = Rect2( 5370, 1288, 1074, 644 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 4 )
region = Rect2( 6444, 1288, 1074, 644 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 4 )
region = Rect2( 7518, 1288, 1074, 644 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 4 )
region = Rect2( 8592, 1288, 1074, 644 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 4 )
region = Rect2( 9666, 1288, 1074, 644 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 4 )
region = Rect2( 0, 1932, 1074, 644 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 4 )
region = Rect2( 1074, 1932, 1074, 644 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 4 )
region = Rect2( 2148, 1932, 1074, 644 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 4 )
region = Rect2( 3222, 1932, 1074, 644 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 4 )
region = Rect2( 4296, 1932, 1074, 644 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 4 )
region = Rect2( 5370, 1932, 1074, 644 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 4 )
region = Rect2( 6444, 1932, 1074, 644 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 4 )
region = Rect2( 7518, 1932, 1074, 644 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 4 )
region = Rect2( 8592, 1932, 1074, 644 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 4 )
region = Rect2( 9666, 1932, 1074, 644 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 4 )
region = Rect2( 0, 2576, 1074, 644 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 4 )
region = Rect2( 1074, 2576, 1074, 644 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 4 )
region = Rect2( 2148, 2576, 1074, 644 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 4 )
region = Rect2( 3222, 2576, 1074, 644 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 4 )
region = Rect2( 4296, 2576, 1074, 644 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 4 )
region = Rect2( 5370, 2576, 1074, 644 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 4 )
region = Rect2( 6444, 2576, 1074, 644 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 4 )
region = Rect2( 7518, 2576, 1074, 644 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 4 )
region = Rect2( 8592, 2576, 1074, 644 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 4 )
region = Rect2( 9666, 2576, 1074, 644 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 4 )
region = Rect2( 0, 3220, 1074, 644 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 4 )
region = Rect2( 1074, 3220, 1074, 644 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 4 )
region = Rect2( 2148, 3220, 1074, 644 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 4 )
region = Rect2( 3222, 3220, 1074, 644 )

[sub_resource type="AtlasTexture" id=176]
atlas = ExtResource( 4 )
region = Rect2( 4296, 3220, 1074, 644 )

[sub_resource type="AtlasTexture" id=177]
atlas = ExtResource( 4 )
region = Rect2( 5370, 3220, 1074, 644 )

[sub_resource type="AtlasTexture" id=178]
atlas = ExtResource( 4 )
region = Rect2( 6444, 3220, 1074, 644 )

[sub_resource type="AtlasTexture" id=179]
atlas = ExtResource( 4 )
region = Rect2( 7518, 3220, 1074, 644 )

[sub_resource type="AtlasTexture" id=180]
atlas = ExtResource( 4 )
region = Rect2( 8592, 3220, 1074, 644 )

[sub_resource type="AtlasTexture" id=181]
atlas = ExtResource( 4 )
region = Rect2( 9666, 3220, 1074, 644 )

[sub_resource type="AtlasTexture" id=182]
atlas = ExtResource( 4 )
region = Rect2( 0, 3864, 1074, 644 )

[sub_resource type="AtlasTexture" id=183]
atlas = ExtResource( 4 )
region = Rect2( 1074, 3864, 1074, 644 )

[sub_resource type="AtlasTexture" id=184]
atlas = ExtResource( 4 )
region = Rect2( 2148, 3864, 1074, 644 )

[sub_resource type="AtlasTexture" id=185]
atlas = ExtResource( 4 )
region = Rect2( 3222, 3864, 1074, 644 )

[sub_resource type="AtlasTexture" id=186]
atlas = ExtResource( 4 )
region = Rect2( 4296, 3864, 1074, 644 )

[sub_resource type="AtlasTexture" id=187]
atlas = ExtResource( 4 )
region = Rect2( 5370, 3864, 1074, 644 )

[sub_resource type="AtlasTexture" id=188]
atlas = ExtResource( 4 )
region = Rect2( 6444, 3864, 1074, 644 )

[sub_resource type="AtlasTexture" id=189]
atlas = ExtResource( 4 )
region = Rect2( 7518, 3864, 1074, 644 )

[sub_resource type="AtlasTexture" id=190]
atlas = ExtResource( 4 )
region = Rect2( 8592, 3864, 1074, 644 )

[sub_resource type="AtlasTexture" id=191]
atlas = ExtResource( 4 )
region = Rect2( 9666, 3864, 1074, 644 )

[sub_resource type="AtlasTexture" id=192]
atlas = ExtResource( 4 )
region = Rect2( 0, 4508, 1074, 644 )

[sub_resource type="AtlasTexture" id=193]
atlas = ExtResource( 4 )
region = Rect2( 1074, 4508, 1074, 644 )

[sub_resource type="AtlasTexture" id=194]
atlas = ExtResource( 4 )
region = Rect2( 2148, 4508, 1074, 644 )

[sub_resource type="AtlasTexture" id=195]
atlas = ExtResource( 4 )
region = Rect2( 3222, 4508, 1074, 644 )

[sub_resource type="AtlasTexture" id=196]
atlas = ExtResource( 4 )
region = Rect2( 4296, 4508, 1074, 644 )

[sub_resource type="AtlasTexture" id=197]
atlas = ExtResource( 4 )
region = Rect2( 5370, 4508, 1074, 644 )

[sub_resource type="AtlasTexture" id=198]
atlas = ExtResource( 4 )
region = Rect2( 6444, 4508, 1074, 644 )

[sub_resource type="AtlasTexture" id=199]
atlas = ExtResource( 4 )
region = Rect2( 7518, 4508, 1074, 644 )

[sub_resource type="AtlasTexture" id=200]
atlas = ExtResource( 4 )
region = Rect2( 8592, 4508, 1074, 644 )

[sub_resource type="AtlasTexture" id=201]
atlas = ExtResource( 4 )
region = Rect2( 9666, 4508, 1074, 644 )

[sub_resource type="AtlasTexture" id=202]
atlas = ExtResource( 4 )
region = Rect2( 0, 5152, 1074, 644 )

[sub_resource type="AtlasTexture" id=203]
atlas = ExtResource( 4 )
region = Rect2( 1074, 5152, 1074, 644 )

[sub_resource type="AtlasTexture" id=204]
atlas = ExtResource( 4 )
region = Rect2( 2148, 5152, 1074, 644 )

[sub_resource type="AtlasTexture" id=205]
atlas = ExtResource( 4 )
region = Rect2( 3222, 5152, 1074, 644 )

[sub_resource type="AtlasTexture" id=206]
atlas = ExtResource( 4 )
region = Rect2( 4296, 5152, 1074, 644 )

[sub_resource type="AtlasTexture" id=207]
atlas = ExtResource( 4 )
region = Rect2( 5370, 5152, 1074, 644 )

[sub_resource type="AtlasTexture" id=208]
atlas = ExtResource( 4 )
region = Rect2( 6444, 5152, 1074, 644 )

[sub_resource type="AtlasTexture" id=209]
atlas = ExtResource( 4 )
region = Rect2( 7518, 5152, 1074, 644 )

[sub_resource type="AtlasTexture" id=210]
atlas = ExtResource( 4 )
region = Rect2( 8592, 5152, 1074, 644 )

[sub_resource type="AtlasTexture" id=211]
atlas = ExtResource( 4 )
region = Rect2( 9666, 5152, 1074, 644 )

[sub_resource type="AtlasTexture" id=212]
atlas = ExtResource( 4 )
region = Rect2( 0, 5796, 1074, 644 )

[sub_resource type="AtlasTexture" id=213]
atlas = ExtResource( 4 )
region = Rect2( 1074, 5796, 1074, 644 )

[sub_resource type="AtlasTexture" id=214]
atlas = ExtResource( 4 )
region = Rect2( 2148, 5796, 1074, 644 )

[sub_resource type="AtlasTexture" id=215]
atlas = ExtResource( 4 )
region = Rect2( 3222, 5796, 1074, 644 )

[sub_resource type="AtlasTexture" id=216]
atlas = ExtResource( 4 )
region = Rect2( 4296, 5796, 1074, 644 )

[sub_resource type="AtlasTexture" id=217]
atlas = ExtResource( 4 )
region = Rect2( 5370, 5796, 1074, 644 )

[sub_resource type="AtlasTexture" id=218]
atlas = ExtResource( 4 )
region = Rect2( 6444, 5796, 1074, 644 )

[sub_resource type="AtlasTexture" id=219]
atlas = ExtResource( 4 )
region = Rect2( 7518, 5796, 1074, 644 )

[sub_resource type="AtlasTexture" id=220]
atlas = ExtResource( 4 )
region = Rect2( 8592, 5796, 1074, 644 )

[sub_resource type="AtlasTexture" id=221]
atlas = ExtResource( 4 )
region = Rect2( 9666, 5796, 1074, 644 )

[sub_resource type="AtlasTexture" id=222]
atlas = ExtResource( 4 )
region = Rect2( 0, 6440, 1074, 644 )

[sub_resource type="AtlasTexture" id=223]
atlas = ExtResource( 4 )
region = Rect2( 1074, 6440, 1074, 644 )

[sub_resource type="AtlasTexture" id=224]
atlas = ExtResource( 4 )
region = Rect2( 2148, 6440, 1074, 644 )

[sub_resource type="AtlasTexture" id=225]
atlas = ExtResource( 4 )
region = Rect2( 3222, 6440, 1074, 644 )

[sub_resource type="AtlasTexture" id=226]
atlas = ExtResource( 4 )
region = Rect2( 4296, 6440, 1074, 644 )

[sub_resource type="AtlasTexture" id=227]
atlas = ExtResource( 4 )
region = Rect2( 5370, 6440, 1074, 644 )

[sub_resource type="AtlasTexture" id=228]
atlas = ExtResource( 4 )
region = Rect2( 6444, 6440, 1074, 644 )

[sub_resource type="AtlasTexture" id=229]
atlas = ExtResource( 4 )
region = Rect2( 7518, 6440, 1074, 644 )

[sub_resource type="AtlasTexture" id=230]
atlas = ExtResource( 4 )
region = Rect2( 8592, 6440, 1074, 644 )

[sub_resource type="AtlasTexture" id=231]
atlas = ExtResource( 4 )
region = Rect2( 9666, 6440, 1074, 644 )

[sub_resource type="AtlasTexture" id=232]
atlas = ExtResource( 4 )
region = Rect2( 0, 7084, 1074, 644 )

[sub_resource type="AtlasTexture" id=233]
atlas = ExtResource( 4 )
region = Rect2( 1074, 7084, 1074, 644 )

[sub_resource type="AtlasTexture" id=234]
atlas = ExtResource( 4 )
region = Rect2( 2148, 7084, 1074, 644 )

[sub_resource type="AtlasTexture" id=235]
atlas = ExtResource( 4 )
region = Rect2( 3222, 7084, 1074, 644 )

[sub_resource type="AtlasTexture" id=236]
atlas = ExtResource( 4 )
region = Rect2( 4296, 7084, 1074, 644 )

[sub_resource type="AtlasTexture" id=237]
atlas = ExtResource( 4 )
region = Rect2( 5370, 7084, 1074, 644 )

[sub_resource type="AtlasTexture" id=238]
atlas = ExtResource( 4 )
region = Rect2( 6444, 7084, 1074, 644 )

[sub_resource type="AtlasTexture" id=239]
atlas = ExtResource( 4 )
region = Rect2( 7518, 7084, 1074, 644 )

[sub_resource type="AtlasTexture" id=240]
atlas = ExtResource( 4 )
region = Rect2( 8592, 7084, 1074, 644 )

[sub_resource type="AtlasTexture" id=241]
atlas = ExtResource( 4 )
region = Rect2( 9666, 7084, 1074, 644 )

[sub_resource type="SpriteFrames" id=121]
animations = [ {
"frames": [ SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ), SubResource( 180 ), SubResource( 181 ), SubResource( 182 ), SubResource( 183 ), SubResource( 184 ), SubResource( 185 ), SubResource( 186 ), SubResource( 187 ), SubResource( 188 ), SubResource( 189 ), SubResource( 190 ), SubResource( 191 ), SubResource( 192 ), SubResource( 193 ), SubResource( 194 ), SubResource( 195 ), SubResource( 196 ), SubResource( 197 ), SubResource( 198 ), SubResource( 199 ), SubResource( 200 ), SubResource( 201 ), SubResource( 202 ), SubResource( 203 ), SubResource( 204 ), SubResource( 205 ), SubResource( 206 ), SubResource( 207 ), SubResource( 208 ), SubResource( 209 ), SubResource( 210 ), SubResource( 211 ), SubResource( 212 ), SubResource( 213 ), SubResource( 214 ), SubResource( 215 ), SubResource( 216 ), SubResource( 217 ), SubResource( 218 ), SubResource( 219 ), SubResource( 220 ), SubResource( 221 ), SubResource( 222 ), SubResource( 223 ), SubResource( 224 ), SubResource( 225 ), SubResource( 226 ), SubResource( 227 ), SubResource( 228 ), SubResource( 229 ), SubResource( 230 ), SubResource( 231 ), SubResource( 232 ), SubResource( 233 ), SubResource( 234 ), SubResource( 235 ), SubResource( 236 ), SubResource( 237 ), SubResource( 238 ), SubResource( 239 ), SubResource( 240 ), SubResource( 241 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[node name="StartScreen" type="Control"]
script = ExtResource( 1 )

[node name="BackgroundImage" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 719.0
texture = ExtResource( 2 )
expand = true

[node name="Buttons" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayButton" type="Button" parent="Buttons"]
margin_left = 765.0
margin_top = 360.0
margin_right = 975.0
margin_bottom = 430.0
custom_fonts/font = ExtResource( 3 )
text = "PLAY"

[node name="CreditsButton" type="Button" parent="Buttons"]
margin_left = 765.0
margin_top = 450.0
margin_right = 975.0
margin_bottom = 520.0
custom_fonts/font = ExtResource( 3 )
text = "CREDITS"

[node name="ExitButton" type="Button" parent="Buttons"]
margin_left = 765.0
margin_top = 540.0
margin_right = 975.0
margin_bottom = 610.0
custom_fonts/font = ExtResource( 3 )
text = "EXIT"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -8 )
scale = Vector2( 1.19385, 1.13187 )
frames = SubResource( 121 )
frame = 119
centered = false

[connection signal="animation_finished" from="AnimatedSprite" to="." method="transitionToLevel"]
